# WinDictoo

./: .gitignore  LICENSE  README.md  pyproject.toml
packaging/: WinDictoo-onefile.spec  WinDictoo.spec  install_shortcuts.ps1  launcher.py  make_icon.py  shot.ps1
src/windictoo/: __init__.py  __main__.py  app.py  audio.py  autostart.py  config.py  gui.py  hotkey.py  insert.py  onboarding.py  refine.py  theme.py  transcribe.py  tray.py  update.py  widgets.py
tests/: smoke_launch.py  smoke_type.py  test_pipeline.py
